# LightsOutSolver

./: .gitignore  LightsOutSolver.cabal  README.md
src/: Main.hs
